# ban12-site

./: .dockerignore  .gitignore  .npmrc  AGENTS.md  Cargo.toml  Dockerfile.shortcuts  README.md  biome.json  docker-compose.yaml  next-i18next.config.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tailwind.config.js  tsconfig.json  turbo.json
.github/ISSUE_TEMPLATE/: report-blog-link.yml
.github/scripts/: deploy-to-vercel.mjs
.github/workflows/: blog-revalidate.yml  build-and-deploy.yml  ci.yml  deploy-to-vercel.yml  deploy-toys-to-cloudflare-worker.yml  deploy-travel-to-cloudflare-worker.yml  deploy-worker.yml  deploy.yml  docker-video-worker.yml  preview.yaml  production.yaml  release.yml
apps/blog/: .env  next.config.js  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/curriculum/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/live-photo/: next.config.ts  (+1 more)
compiled-lang/: en.json  zh-CN.json
components/: Welcome.tsx
crates/calculate-hash/: Cargo.toml
crates/calculate-hash/pkg/: calculate_hash.d.ts  calculate_hash.js  calculate_hash_bg.js  calculate_hash_bg.wasm  calculate_hash_bg.wasm.d.ts  package.json
crates/calculate-hash/src/: lib.rs
crates/similar-wasm-wrapper/: Cargo.toml
crates/similar-wasm-wrapper/src/: lib.rs
helper/: loadIntlMessages.ts
lang/: en.json  zh-CN.json
nginx/: modules.conf  nginx.conf
pages/: _app.js  _app.tsx  _document.tsx  index.js  index.tsx
supabase/: config.toml  seed.sql
types.d/: react-i18next.d.ts
(+606 files in other folders)
