[package]
name = "calculate-hash"
version = "0.1.0"
edition = "2021"
description = "A Rust library for calculating hash values"
repository = "https://github.com/ban12-project/ban12-site"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
sha2 = "0.10.7"
wasm-bindgen = "0.2.87"
